# SHIZOZ_Labs

./: .gitignore  .gitmodules  README.md
Lab1/: CMakeLists.txt
Lab1/source/: main.cpp
Lab2/: CMakeLists.txt
Lab2/source/: main.cpp
Lab3/: CMakeLists.txt
Lab3/source/: main.cpp
Lab4/: CMakeLists.txt
Lab4/include/: face_recognition.hpp
Lab4/resources/: name_encodings
Lab4/source/: main.cpp
Lab5/: main.py
Lab6/: Lab6.ipynb
